--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
-<section>
-  <button id="joke">what do you call this...hahahaplop?</button>
+<!DOCTYPE html>
+<html>
 
-  <div id="answer">
-    <p>someone laughing their head off!
-    </p>
-    <div id="close">&otimes;</div>
-  </div>
+<head>
+  <meta charset="utf-8">
+  <title> yuan's webpage </title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-</section>
+<body>
+  <section>
+    <button id="joke">what do you call this...hahahaplop?</button>
+
+    <div id="answer">
+      <p>someone laughing their head off!
+      </p>
+      <div id="close">&otimes;</div>
+    </div>
+
+  </section>
+  <script src="script.js">
+  </script>
+</body>
+
+</html>
